[package]
name = "embedded-hal-aht2x"
authors = [ "shimun <shimun@shimun.net>" ]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Driver for the AHT2x temperature and humidity sensor based on embedded-hal-async"

[dependencies]
crc = { version = "3.2.1", optional = true }
defmt = { version = "0.3.10", optional = true }
embedded-hal-async = "1.0.0"

[features]
default = ["crc"]
crc = ["dep:crc"]
defmt = ["dep:defmt"]
